# claude-conversation-analysis

./: .gitignore  CLAUDE.md  README.md  SETUP.md  TASKS.md  TODO.md  pyproject.toml  start.sh
flask_app/: __init__.py  app.py  config.py  requirements.txt
flask_app/static/css/: base.css
flask_app/static/js/: interactions.js
flask_app/static/themes/: chatgpt.css
flask_app/templates/: 404.html  500.html  base.html  conversation.html  export.html  index.html
flask_app/utils/: __init__.py  cache_manager.py  conversation_parser.py  sanitizer.py  tree_builder.py
research/: README.md  RELATIONSHIPS.md
research/agents/: README.md
research/commands/: README.md
research/debug/: README.md
research/file-history/: README.md
research/history/: README.md
research/ide/: README.md
research/plugins/: README.md
research/projects/: README.md
research/session-env/: README.md
research/settings/: README.md
research/shell-snapshots/: README.md
research/statsig/: README.md
research/todos/: README.md
tools/: __init__.py  analyze_all.py  analyze_json_files.py  analyze_jsonl_files.py  analyze_markdown_folders.py  analyze_misc_folders.py  analyze_relationships.py  base_analyzer.py  config.py  file_utils.py  json_parser.py  logger.py  markdown_generator.py  relationship_analyzer.py  sanitizer.py
